syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "go-practice/pb";

message LoginUserRequest {
    string user_name = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string token = 2;
    google.protobuf.Timestamp access_token_expired = 3;
    string session_id = 4;
}